--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,9 +125,9 @@ steps:
 - script: |
     
     # clono repos
-    git clone -b master --single-branch git@github.com:DevOps-ORT-G2/products-service.git ms-products
-    git clone -b master --single-branch git@github.com:DevOps-ORT-G2/payments-service.git ms-payments
-    git clone -b master --single-branch git@github.com:DevOps-ORT-G2/shipping-service.git ms-shipping
+    git clone -b master --single-branch https://github.com/DevOps-ORT-G2/products-service.git ms-products
+    git clone -b master --single-branch https://github.com/DevOps-ORT-G2/payments-service.git ms-payments
+    git clone -b master --single-branch https://github.com/DevOps-ORT-G2/shipping-service.git ms-shipping
     
     # buildeo jars e imagenes dockers
     cd ms-products && mvn install && docker build --build-arg JAR_FILE=target/products-service-example-0.0.1-SNAPSHOT.jar -t products-service . 
