--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -163,7 +163,7 @@ steps:
     arguments: '--build-arg JAR_FILE=target/orders-service-example-0.0.1-SNAPSHOT.jar'
     imageName: 'orders-service'
 
-- script: docker run -d --name orders-service-test --env "APP_ARGS=http://172.17.0.4:8080 http://172.17.0.5:8080 http://172.17.0.3:8080 orders-service
+- script: docker run -d --name orders-service-test --env "APP_ARGS=http://172.17.0.4:8080 http://172.17.0.5:8080 http://172.17.0.3:8080" orders-service
   displayName: Levantar docker 
 
 - script: docker inspect orders-service-test | grep '"IPAddress":' -A 0 -m 1 | cut -f4 -d'"' 
