error de sintaxis en conf

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,7 +101,7 @@ steps:
       location /products {
         proxy_pass http://products/products/;
       }
-      location /orders {
+      location /shipping {
         proxy_pass http://shipping/shipping/;
       }
     }";
