--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -174,7 +174,9 @@ steps:
   displayName: Ejecutar test Postman
 
 
-
+#########################################################################################
+# Actualizamos la versión de build
+#########################################################################################
 
 - script: | 
     # borro directorios utilizados anteriormente para no agregarlos al repo
@@ -187,6 +189,8 @@ steps:
 
     new_version=$(($version_build+1))
     echo "version_build="$new_version > .version/build
+
+    # seteo variable para pder usar en task del push a ecr
     echo "##vso[task.setvariable variable=tag_version]$new_version"
     cat .version/build
   
@@ -195,9 +199,6 @@ steps:
     git push origin HEAD:master 
   displayName: Actualizar versión de build 
   
-- bash: |
-    echo "MI VARIABLE TAG: $tag_version"
-
 ##########################################################
 # Pusheamos la imagen de docker al ECR
 ##########################################################
